/*
 * $Id: ChangeLog,v 1.2596 2004/03/18 13:52:16 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-18 15:35 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbdefs.h
    + do not overwrite user byte order settings if already set
      HB_{PDP,BIG,LITTLE}_ENDIAN

  + xharbour/tests/bldtest/Makefile
    - removed unnecessary libs

  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    - remove line with endian dependent code I missed in last commit

2004-03-18 11:00 UTC-0300 Luiz Rafael Culik Guimaraes<culikr@brturbo.com>
  ! contrib/hbzlib/zipnew.cpp
    ! minor fix to hb_unzipSel()

2004-03-18 05:35 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/vm/codebloc.c
    ! fixed buggy use of HB_PCODE_MKUSHORT()
      HB_PCODE_MK*(), HB_{GET,PUT}_{LE,BE}_*() and HB_*_{FROM,TO}_LE()
      as many others are macros which may use more then once given
      parameters - you cannot use and {pre/post}{inc/dec}rementation
      in parameters. Changing them to function (or pseudo function) will
      reduce performance in many cases (but in some when poor compiler
      is used can give faster codes)

  * xharbour/include/hbdefs.h
    + auto detection byte order (little/big/pdp endian) in Linux+GCC
      and other GNU compatible platforms

  + xharbour/tests/bldtest/Makefile
  + xharbour/tests/bldtest/endian.c
    + simple C program to check if xHarbour can be compiled on
      used machine / system / C compiler

  * xharbour/bin/hb-func.sh
    * xhb* scripts modified to work in systems where there is no slang
      and/or ncurses at all

  * xharbour/include/hbrddcdx.h
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.h
    ! some fixes in index create procedure for big endian machine support